--- a/src/Assets/CSS/App.css
+++ b/src/Assets/CSS/App.css
@@ -35,7 +35,7 @@
   cursor: pointer;
 }
 .pointer:hover {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 .faded {
   opacity: 0.2;
@@ -45,6 +45,13 @@
 }
 .shown {
   display: inline-block !important;
+}
+.wordwrap {
+  white-space: pre-wrap;      /* CSS3 */
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -pre-wrap;     /* Opera <7 */
+  white-space: -o-pre-wrap;   /* Opera 7 */
+  word-wrap: break-word;      /* IE */
 }
 
 
@@ -87,6 +94,15 @@
 }
 .App-dark {
   background: #666666;
+  color: #eee;
+}
+.App-dark input, .App-dark textarea, .App-dark textarea[disabled], .App-dark select, .App-dark textarea[readonly] {
+  background: #444444;
+  color: #eee;
+}
+.App-dark .modal-content {
+  background: #333;
+  border: 4px solid #aaa;
 }
 
 .modal-mask {
@@ -94,10 +110,15 @@
   height: 100%;
   position: fixed;
   background: #000;
-  opacity: 0.1;
+  opacity: 0.3;
 }
 .modal-dialog.modal-xl {
   max-width: 1000px;
+}
+
+.bg-neutral {
+  background: #bbb;
+  color: #333;
 }
 
 #settings {
